--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,7 @@
 trigger:
 - main
 
-pool: omkar-hcl
-
+pool: omkar-hcl   # <- Windows based self-hosted agent
 
 stages:
 - stage: BuildCustomImage
@@ -12,30 +11,36 @@ stages:
     displayName: 'Run Packer Build'
 
     steps:
-    - task: Bash@3
+    # Step 1 - Install Packer
+    - task: PowerShell@2
       displayName: 'Install Packer'
       inputs:
         targetType: 'inline'
         script: |
-          curl -fsSL https://apt.releases.hashicorp.com/gpg | gpg --dearmor -o /usr/share/keyrings/hashicorp.gpg
-          echo "deb [signed-by=/usr/share/keyrings/hashicorp.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-          sudo apt-get update && sudo apt-get install -y packer
+          $packerVersion = "1.11.2"
+          Invoke-WebRequest -Uri "https://releases.hashicorp.com/packer/$packerVersion/packer_${packerVersion}_windows_amd64.zip" -OutFile "packer.zip"
+          Expand-Archive packer.zip -DestinationPath "$Env:ProgramFiles\packer" -Force
+          # Add Packer to PATH for current session
+          $env:Path += ";$Env:ProgramFiles\packer"
+          Write-Host "Packer installed at $Env:ProgramFiles\packer"
 
+    # Step 2 - Azure Login via Federated Service Connection
     - task: AzureCLI@2
       displayName: 'Azure Login via Service Connection (Federated)'
       inputs:
-        azureSubscription: 'HCL-infrasc'  # tera service connection name yahan daal
-        scriptType: 'bash'
+        azureSubscription: 'HCL-infrasc'   # <-- your service connection name
+        scriptType: 'ps'
         scriptLocation: 'inlineScript'
         inlineScript: |
-          echo "Logged into Azure successfully via federated credentials"
+          Write-Host "Logged into Azure successfully via federated credentials"
 
-    - task: Bash@3
+    # Step 3 - Run Packer Build
+    - task: PowerShell@2
       displayName: 'Run Packer Build'
       inputs:
         targetType: 'inline'
         script: |
+          $env:Path += ";$Env:ProgramFiles\packer"
           cd packer
           packer init .
           packer build azure-image.pkr.hcl
-
